[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game/TileClickArea.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Redkost Comic.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 5
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Float"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BadNeighborsLabel:margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 25.0, 10, 25.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BadNeighborsLabel:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}

[node name="TileClickArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -1, -127, 63, 4, 126, 129, 63 )

[node name="BadNeighborsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 25.0
margin_right = 43.0
margin_bottom = 16.5
custom_fonts/font = SubResource( 1 )
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Float = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimationDeferringTimer" type="Timer" parent="."]
one_shot = true

[connection signal="input_event" from="." to="." method="_on_self_input_event"]
[connection signal="timeout" from="AnimationDeferringTimer" to="." method="_on_AnimationDeferringTimer_timeout"]
